@@ -398,7 +398,7 @@ static void
 _elm_box_smart_add(Eo *obj, void *_pd EINA_UNUSED, va_list *list EINA_UNUSED)
 {
    Elm_Widget_Smart_Data *wd = eo_data_get(obj, ELM_OBJ_WIDGET_CLASS);
-   wd->resize_obj = evas_object_box_add(evas_object_evas_get(obj));
+   elm_widget_resize_object_set(obj, evas_object_box_add(evas_object_evas_get(obj)));
 
    evas_object_box_layout_set(wd->resize_obj, _elm_box_custom_layout, obj, NULL);
 
