@@ -2274,16 +2274,15 @@ static void
 _elm_toolbar_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
    Elm_Toolbar_Smart_Data *priv = _pd;
-   Elm_Widget_Smart_Data *wd = eo_data_get(obj, ELM_OBJ_WIDGET_CLASS);
+   Evas_Object *edje;
 
-   wd->resize_obj =
-     edje_object_add(evas_object_evas_get(obj));
+   edje = edje_object_add(evas_object_evas_get(obj));
+   elm_widget_resize_object_set(obj, edje);
 
    eo_do_super(obj, evas_obj_smart_add());
 
    elm_widget_theme_object_set
-     (obj, wd->resize_obj, "toolbar", "base",
-     elm_widget_style_get(obj));
+     (obj, edje, "toolbar", "base", elm_widget_style_get(obj));
 
    priv->hit_rect = evas_object_rectangle_add(evas_object_evas_get(obj));
    evas_object_smart_member_add(priv->hit_rect, obj);
@@ -2296,7 +2295,7 @@ _elm_toolbar_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 
    elm_widget_can_focus_set(obj, EINA_TRUE);
 
-   eo_do(obj, elm_scrollable_interface_objects_set(wd->resize_obj, priv->hit_rect));
+   eo_do(obj, elm_scrollable_interface_objects_set(edje, priv->hit_rect));
 
    priv->standard_priority = -99999;
 
@@ -2308,17 +2307,13 @@ _elm_toolbar_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
          elm_scrollable_interface_drag_start_cb_set(_drag_start_cb));
 
    edje_object_signal_callback_add
-     (wd->resize_obj, "elm,action,left", "elm",
-     _elm_toolbar_action_left_cb, obj);
+     (edje, "elm,action,left", "elm", _elm_toolbar_action_left_cb, obj);
    edje_object_signal_callback_add
-     (wd->resize_obj, "elm,action,right", "elm",
-     _elm_toolbar_action_right_cb, obj);
+     (edje, "elm,action,right", "elm", _elm_toolbar_action_right_cb, obj);
    edje_object_signal_callback_add
-     (wd->resize_obj, "elm,action,up", "elm",
-     _elm_toolbar_action_up_cb, obj);
+     (edje, "elm,action,up", "elm", _elm_toolbar_action_up_cb, obj);
    edje_object_signal_callback_add
-     (wd->resize_obj, "elm,action,down", "elm",
-     _elm_toolbar_action_down_cb, obj);
+     (edje, "elm,action,down", "elm", _elm_toolbar_action_down_cb, obj);
 
    priv->shrink_mode = ELM_TOOLBAR_SHRINK_NONE;
    priv->theme_icon_size = _elm_toolbar_icon_size_get(obj);
