@@ -110,7 +110,7 @@ _elm_web_smart_add(Eo *obj, void *_pd EINA_UNUSED, va_list *list EINA_UNUSED)
    Elm_Widget_Smart_Data *wd = eo_data_get(obj, ELM_OBJ_WIDGET_CLASS);
 
 #ifdef HAVE_ELEMENTARY_WEB
-   wd->resize_obj = _view_add(obj);
+   elm_widget_resize_object_set(obj, _view_add(obj));
 
    eo_do_super(obj, evas_obj_smart_add());
 
