@@ -70,6 +70,7 @@ Improvements:
    * Ctxpopup will be dismissed when language is changed.
    * Popup is now a focusable object.
    * Improve naviframe to not apply items' style multiple times when theme/styles are changed.
+   * Don't handle the resize objects in widget infrastructure. Actually resize objects are sub objects so we don't need to care them separately. This causes overhead in some cases(ie, theme change..).
 
 Fixes:
 
